--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-    "tabWidth": 2,
-    "singleQuote": true,
-    "arrowParens": "avoid",
-    "semi": false,
-    "trailingComma": "none",
-    "bracketSpacing": true 
-  }
+  "tabWidth": 2,
+  "singleQuote": false,
+  "arrowParens": "avoid",
+  "semi": false,
+  "trailingComma": "all",
+  "bracketSpacing": true 
+}
