--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-2",
     "animate.css": "^4.1.1",
+    "axios": "^0.24.0",
     "bootstrap": "^5.0.0-alpha2",
     "core-js": "^3.6.5",
     "popper.js": "^1.16.1",
